# gb-webapp

./: Cargo.toml  index.html  style.scss
assets/scripts/: logs.js  menu.js  rom_loader.js  speed_selector.js
assets/style/: collapsible.scss  gb.scss  style.scss
src/: application.rs  debugger.rs  file_types.rs  gb_view.rs  lib.rs  main.rs  rom_downloader.rs  screen.rs
src/application/: input.rs
