[package]
name = "gb-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-core = { git = "https://github.com/unfinishedprogram/gb-core.git", branch = "main" }
sycamore = { version = "0.8.2", features = ["suspense"] }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"
futures-util = "0.3.26"
gloo = { version = "0.8.0", features = ["futures"] }
web-sys = { version = "0.3.61", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }
console_error_panic_hook = "0.1.7"
