[package]
name = "gb-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-core = { git = "https://github.com/unfinishedprogram/gb-core.git", branch = "main" }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.84"
serde_json = "1.0.89"
serde = { version = "1.0.150", features = ["derive"] }
futures-util = "0.3.26"
gloo = { version = "0.8.0", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.60", features = [
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "Document",
    "HtmlElement",
    "Node",
    "Event",
    "Storage",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "File",
    "Performance",
] }
console_error_panic_hook = "0.1.7"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
reqwest = { version = "0.11" }
log = "0.4.17"
